--- a/mycv.css
+++ b/mycv.css
@@ -1,27 +1,55 @@
+.container { 
+    margin : 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 10px;
+
+}
+
+@media (max-width: 768px) {
+    /* For mobile phones: */
+    .container {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+
+  @media (max-width: 479px) {
+    .container {
+      grid-template-columns: 1fr;
+    }
+}
 
 
+
+.education  {
+
+}
+
+.websitepro {
+
+}
+
+.collectiveproj {
+
+}
+
+.persoproj {
+
+}
+
+  
+  
+  
+  
+  
   /* For Responsive Images */
 
-
-  * {
-    box-sizing: border-box;
-  }
   
   body{
       background-color: #EEF4D4;
   }
 
-  .row::after {
-    content: "";
-    clear: both;
-    display: block;
-  }
-  
-  [class*="col-"] {
-    float: left;
-    padding: 15px;
-  }
-  
   html {
     font-family: 'Cousine', monospace;
     font-size: 12px;
@@ -30,13 +58,14 @@
   .header {;
     color: black;
     padding: 15px;
-    font-family: 'Megrim', cursive;
-    font-size:25px;
+    font-family: 'Roboto', sans-serif;  font-size:25px;
   }
 
   h2 {
-      font-family: 'Megrim', cursive;
-    font-size: 30px;}
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    margin: 0px;
+    padding: 0px;}
   
   .menu ul {
     list-style-type: none;
@@ -57,21 +86,11 @@
  
   
   /* For desktop: */
-  .col-1 {width: 15%;}
-  .col-3 {width: 30%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
+  .menu {width: 30%;}
   
   @media only screen and (max-width: 768px) {
     /* For mobile phones: */
-    [class*="col-"] {
+    .menu {
       width: 100%;
     }
   }
